# dsf-viewer

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/: Home.py  utils.py
src/pages/: 1_📊_Upload_Data.py  2_🎯_Control_Analysis.py  3_📐_Detect_Atypical_Wells.py  4_🔍_Well_Analysis.py  5_🗺️_Summary_and_Data_Download.py
src/session/: __init__.py  page_states.py  state_manager.py  utils.py
